<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Wedcraze</string>
    <string name="signup_btn">Sign Up</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="log_in">Log In</string>
    <string name="forgot_login">Forgot Login?</string>
    <string name="or">Or</string>
    <string name="or_login">Or Log In with</string>
    <string name="facebook_btn">Facebook</string>
    <string name="gmail_btn">Gmail</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="email">Email Id</string>
    <string name="password2">Password</string>
    <string name="description">Image description</string>
    <string name="policy">By signing up you agree to Privacy Policy and Terms of Service</string>
    <string name="title_activity_sign_up_activity">SignUp_activity</string>
    <string name="hello_world">Hello world!</string>
    <string name="create_wedding">Create a wedding</string>
    <string name="join_wedding">Join a wedding</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_create_join_wedding">Create_join_wedding</string>
    <string name="title_activity_join_wedding">Join_wedding</string>
    <string name="introduce">Introduce Yourself</string>
    <string name="done">I am done!</string>
    <string name="yourname">Your name:</string>
    <string name="belongto">You belong to which side:</string>
    <string name="teambride">Team Bride</string>
    <string name="teamgroom">Team Groom</string>
    <string name="teamboth">Both</string>
    <string name="title_activity_main__admin__page">Main_Admin_Page</string>
    <string name="relatedhow">How are you related?</string>
    <string name="create_events">Create wedding events</string>
    <string name="create_events_content">"Creating a separate folder for each event will let you share the event details and enable your guests to upload picture for every occasion"</string>
    <string name="start_creating">Start creating</string>
    <string name="do_later">Do it later</string>
    <string name="title_activity_events__page">Events_Page</string>
    <string name="wedding_event">Your wedding events</string>
    <string name="mehendi">Mehendi</string>
    <string name="title_activity_invite_guests">InviteGuests</string>
    <string name="invite_guests">Invite Guests</string>
    <string name="invite_guests_content">Say goodbye to the hassle of creating you wedding pictures from everyone across different platforms, invite your family and friends to your WedCraze profile</string>
    <string name="title_activity_create_checklist">CreateChecklist</string>
    <string name="create_checklist">Create your Checklist</string>
    <string name="create_checklist_content">Scroll through our recommended to-do list, coose the tasks that need to be done and sit back as WedCraze sends you timely reminders</string>
    <string name="title_activity_create_invitations">CreateInvitations</string>
    <string name="create_invitations">Create Invitations</string>
    <string name="create_invitations_content">Choose from our wide range of vibrant templates to create customized electronic invitations for your loved ones, free of cost!</string>
    <string name="title_activity_create_your_story">CreateYourStory</string>
    <string name="create_your_story">Create Your Story</string>
    <string name="create_your_story_content">Love or arranged, every marriage has a beautiful story leading up to it. Immortalize yours by sharing it with us on WedCraze and let all your guests witness the magical moments that culminated in the sacred and everlasting bond with your loved one.</string>
    <string name="title_activity_your_guest_list">YourGuestList</string>
    <string name="your_guest_list">Your Guest List</string>
    <string name="add_more_guests">Add more guests</string>
    <string name="next">Next</string>
    <string name="title_activity_admin_profile_page">AdminProfilePage</string>
    <string name="weddingcouple">NIKITA WEDS RAHUL</string>
    <string name="weddingid">nikitarahul2015</string>
    <string name="createevents">Create Events</string>
    <string name="inviteguests">Invite Guests</string>
    <string name="yourweddingevents">Your wedding events</string>
    <string name="signupwith">Sign up with</string>
    <string name="orsignupwith">Or sign up with mail</string>
    <string name="emailid">Or sign up with mail</string>
    <string name="emailaddress">email address</string>
    <string name="existinguser">Existing User?</string>
    <string name="login">Login</string>
    <string name="title_activity_create_your_profile">CreateYourProfile</string>
    <string name="bridename">Bride name</string>
    <string name="groomname">Groom name</string>
    <string name="title_activity_create_profile">CreateProfile</string>

</resources>