<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signup_bg"
    tools:context="com.app.wedcraze.signup" >

    <!--
         The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc.
    -->

    <TextView
        android:id="@+id/fullscreen_content_signup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true"
        
        android:textColor="#33b5e5"
        android:textSize="50sp"
        android:textStyle="bold" />

    <!--
         This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows.
    -->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="520dp"
        android:fitsSystemWindows="true" >

        <LinearLayout
            android:id="@+id/fullscreen_content_controls_signup"
            style="?metaButtonBarStyle"
            android:layout_width="355dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="#fff"
            android:orientation="vertical"
            tools:ignore="UselessParent" >

            <EditText
                android:id="@+id/fname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:ems="10"
                android:hint="@string/fname"
                android:inputType="text"
                tools:ignore="HardcodedText" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/lname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:ems="10"
                android:hint="@string/lname"
                android:inputType="text"
                tools:ignore="HardcodedText" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/editText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="text"
                tools:ignore="HardcodedText" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:ems="10"
                android:hint="@string/password2"
                android:inputType="textPassword"
                tools:ignore="HardcodedText" />

            <ImageView
                android:id="@+id/sign_up_img_btn"
                android:layout_width="190dp"
                android:layout_height="85dp"
                android:layout_gravity="center"
                android:contentDescription="@string/description"
                android:onClick="Create_join_wedding"
                android:src="@drawable/signup_img" />

            <TextView
                android:id="@+id/policy"
                android:layout_width="226dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:gravity="center_vertical|center_horizontal|center"
                android:text="@string/policy"
                android:textColor="#A4A4A4" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:text="@string/or_login"
                android:textColor="#A4A4A4" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/facebook"
                    style="@style/ButtonBarButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="#3B589A"
                    android:text="@string/facebook_btn"
                    android:textSize="23sp" />

                <Button
                    android:id="@+id/gmail_btn"
                    style="@style/ButtonBarButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="#F01A26"
                    android:text="@string/gmail_btn"
                    android:textSize="23sp"
                    android:textStyle="normal" />
            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

</FrameLayout>
