<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.app.wedcraze.AdminProfilePage" 
    android:background="#fff"
    >

    <LinearLayout
        android:id="@+id/adminprofilepage_llayout_1"
        style="?metaButtonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:background="#fff"
        android:orientation="vertical"
        tools:ignore="UselessParent" >

        <TextView
            android:id="@+id/weddingcouple"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="1dp"
            android:layout_weight="166"
            android:gravity="center"
            android:keepScreenOn="true"
            android:text="@string/weddingcouple"
            android:textColor="#99D0D5"
            android:textSize="20sp" />
        
        <TextView
            android:id="@+id/weddingid"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="1dp"
            android:layout_weight="166"
            android:gravity="center"
            android:keepScreenOn="true"
            android:text="@string/weddingid"
            android:textColor="#757575"
            android:textSize="15sp" />
        
        <ImageView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:adjustViewBounds="true"
	        android:src="@drawable/landingcover" />
        
        
    </LinearLayout>
    
	<LinearLayout
	    android:id="@+id/adminprofilepage_button_layout"
	    style="?metaButtonBarStyle"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/adminprofilepage_llayout_1"
	    android:background="#fff"
	    android:gravity="center_vertical|center_horizontal|center"
	    android:orientation="horizontal"
	    tools:ignore="UselessParent" >
		
		<Button
		    android:id="@+id/inviteguests"
		    android:layout_width="0dp"
		    android:layout_weight="1"
		    android:layout_height="wrap_content"
		    android:background="#F38993"
		    android:elevation="5dp"
		    android:text="@string/inviteguests"
		    android:translationZ="25dp"
		    android:onClick="createyourstory" 
		    android:layout_marginEnd="5dp"
		    android:layout_marginTop="5dp"
		    android:padding="5dp"/>
		
		<Button
		    android:id="@+id/createevents"
		    android:layout_width="0dp"
		    android:layout_weight="1"
		    android:layout_height="wrap_content"
		    android:background="#F38993"
		    android:elevation="5dp"
		    android:text="@string/createevents"
		    android:translationZ="25dp"
		    android:onClick="createevents" 
		    android:layout_marginStart="5dp"
		    android:layout_marginTop="5dp"
		    android:padding="5dp"/>
    </LinearLayout>
	<LinearLayout
        android:id="@+id/adminprofilepage_llayout_2"
        style="?metaButtonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:orientation="vertical"
        tools:ignore="UselessParent"
        android:layout_below="@id/adminprofilepage_button_layout" >

        <TextView
            android:id="@+id/yourweddingevents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:keepScreenOn="true"
            android:text="@string/yourweddingevents"
            android:textColor="#99D0D5"
            android:textSize="20sp" 
            android:layout_marginTop="5dp"
            />
     </LinearLayout>
     <LinearLayout
        	android:id="@+id/adminprofilepage_llayout_3"
	        style="?metaButtonBarStyle"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:background="#fff"
	        android:orientation="horizontal"
	        tools:ignore="UselessParent"
	        android:layout_below="@id/adminprofilepage_llayout_2" >

         <ImageView
             android:id="@+id/eventsicon1"
             android:layout_width="63dp"
             android:layout_height="65dp"
             android:layout_weight="1"
             android:src="@drawable/eventsicon" />
         
         <ImageView
             android:id="@+id/eventsicon2"
             android:layout_width="63dp"
             android:layout_height="65dp"
             android:layout_weight="1"
             android:src="@drawable/eventsicon" />
         
         <ImageView
             android:id="@+id/eventsicon3"
             android:layout_width="63dp"
             android:layout_height="65dp"
             android:layout_weight="1"
             android:src="@drawable/eventsicon" />
         
     </LinearLayout>
</RelativeLayout>	