<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.app.wedcraze.YourGuestList" 
    android:background="#fff"
    >

    <LinearLayout
        android:id="@+id/your_guest_list_llayout_1"
        style="?metaButtonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="#fff"
        android:orientation="vertical"
        tools:ignore="UselessParent" >

        <TextView
            android:id="@+id/create_invitations"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="1dp"
            android:layout_weight="166"
            android:gravity="center"
            android:keepScreenOn="true"
            android:text="@string/your_guest_list"
            android:textColor="#99D0D5"
            android:textSize="20sp" />
    </LinearLayout>
	<LinearLayout
        android:id="@+id/your_guest_list_llayout_2"
        style="?metaButtonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="#fff"
        android:orientation="horizontal"
        tools:ignore="UselessParent" >
        
    </LinearLayout>
        
	<LinearLayout
	    android:id="@+id/your_guest_list_button_layout"
	    style="?metaButtonBarStyle"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:background="#fff"
	    android:orientation="vertical"
	    tools:ignore="UselessParent" >
		
		<Button
		    android:id="@+id/bSearch"
		    android:layout_width="fill_parent"
		    android:layout_height="50dp"
		    android:padding="16dp"
		    android:text="@string/add_more_guests"
		    android:drawableStart="@drawable/guestlisticon"
		    android:textSize="12sp"
		    android:background="#fff"
		    android:textColor="#000"
		    />
		
		<Button
		    android:id="@+id/next"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_margin="10dp"
		    android:layout_marginBottom="46dp"
		    android:background="#F38993"
		    android:elevation="5dp"
		    android:text="@string/next"
		    android:translationZ="25dp"
		    android:onClick="createyourstory" />
    </LinearLayout>
</RelativeLayout>
